processed/jira/txt/LU/LU-9354.txt
Key:        LU-9354
Summary:    PPC build fail in function 'lfs_setstripe':
Link:       https://jira.whamcloud.com/browse/LU-9354
Type:       Bug
Priority:   Major
Status:     Resolved
Resolution: Fixed
Assignee:   Minh Diep - TLC
Reporter:   Minh Diep - TLC
Created:    Mon, 17 Apr 2017 15:36:17 +0000
Updated:    Wed, 26 Apr 2017 11:09:23 +0000
Resolved:   Wed, 26 Apr 2017 11:09:23 +0000

--- Description ---
sk_utils.o  ../../../libcfs/libcfs/libcfs.a -lgssapi_krb5 -lkrb5 -lk5crypto -lcom_err -lcrypto -lssl -lm -lkeyutils
lfs.c: In function 'lfs_setstripe':
lfs.c:1414:8: error: passing argument 2 of 'llapi_parse_size' from incompatible pointer type [-Werror]
        &size_units, 0);
        ^
In file included from lfs.c:70:0:
/tmp/rpmbuild-lustre-jenkins-6sJHK5QL/BUILD/lustre-2.9.55_35_gaa32cc5/lustre/include/lustre/lustreapi.h:291:12: note: expected 'long long unsigned int *' but argument is of type '__u64 *'
 extern int llapi_parse_size(const char *optarg, unsigned long long *size,
            ^
cc1: all warnings being treated as errors
make[5]: *** [lfs.o] Error 1
make[5]: *** Waiting for unfinished jobs....
make[4]: *** [all-recursive] Error 1
make[3]: *** [all-recursive] Error 1
make[2]: *** [all-recursive] Error 1

Recent landing broke PPC build 

https://build.hpdd.intel.com/job/lustre-ppc/748/arch=ppc64,build_type=client,distro=el7,ib_stack=inkernel/

--- Comment (pjones, Wed, 26 Apr 2017 11:09:23 +0000) ---
Landed for 2.10

--- Comment (gerrit, Wed, 26 Apr 2017 03:38:27 +0000) ---
Oleg Drokin (oleg.drokin@intel.com) merged in patch https://review.whamcloud.com/26727/

Subject: LU-9354 utils: fix lfs.c compile for PPC

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: c18cc8c58a24fede59b6410d7865056a837ed89e

--- Comment (gerrit, Wed, 19 Apr 2017 02:55:24 +0000) ---
Andreas Dilger (andreas.dilger@intel.com) uploaded a new patch: https://review.whamcloud.com/26727

Subject: LU-9354 utils: fix lfs.c compile for PPC

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 382fd08d0e5ccdca5e32cd8dd43affff4f41477c
